Using api to get landing and project info and fix responsive layout issues

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -25,6 +25,6 @@ body {
 
 @media (min-width: 1660px) {
     #copyright-container {
-        margin: 2rem 0 1rem;
+        margin: 2rem 0 0.5rem;
     }
 }
